--- a/sudoku/src/main/resources/application.properties
+++ b/sudoku/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-logging.level.org.springframework = debug
+logging.level.org.springframework = info
+logging.level.org.springframework.scheduling = info
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=rachel.littleangel@gmail.com
+spring.mail.password=loveyouma@123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
